[gd_scene load_steps=91 format=3 uid="uid://cauia1447s1l2"]

[ext_resource type="Script" path="res://Scenes/Squirrel/squirrel.gd" id="1_ufrd5"]
[ext_resource type="Texture2D" uid="uid://c8uj2lmfc8owk" path="res://Assets/Animations/mokus_entry.png" id="2_4yjlw"]
[ext_resource type="Texture2D" uid="uid://b03j7cmj4u1ep" path="res://Assets/Animations/mokus_gadget_runs.png" id="2_nx48e"]
[ext_resource type="Texture2D" uid="uid://bpmehibsoc0i6" path="res://Assets/Animations/mokus_exit.png" id="3_vuy3o"]
[ext_resource type="Shader" path="res://Scenes/Squirrel/Squirrel.gdshader" id="5_6td6m"]
[ext_resource type="AudioStream" uid="uid://b1aox6lpoamew" path="res://Assets/Sounds/SFX/victory.mp3" id="6_lakr4"]
[ext_resource type="AudioStream" uid="uid://cjf3bxc2kyc3h" path="res://Assets/Sounds/SFX/érkezés.mp3" id="7_2yjpb"]
[ext_resource type="AudioStream" uid="uid://2ld57ig7ikcq" path="res://Assets/Sounds/SFX/mokus move.mp3" id="8_h6q8h"]
[ext_resource type="AudioStream" uid="uid://df3cbjvga2bji" path="res://Assets/Sounds/SFX/hit.mp3" id="9_twflp"]
[ext_resource type="AudioStream" uid="uid://beq4ny3o5ncv8" path="res://Assets/Sounds/SFX/speed boost.mp3" id="10_lvje1"]
[ext_resource type="AudioStream" uid="uid://wsax7wb0efa8" path="res://Assets/Sounds/SFX/invisibility.mp3" id="11_wn50d"]
[ext_resource type="AudioStream" uid="uid://75vib55gb6pp" path="res://Assets/Sounds/SFX/hide.mp3" id="12_e1ejo"]
[ext_resource type="AudioStream" uid="uid://isvgcwanyr4k" path="res://Assets/Sounds/Music/001_theme.mp3" id="13_kk5gr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2k2wp"]
atlas = ExtResource("2_4yjlw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax5gp"]
atlas = ExtResource("2_4yjlw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85w5a"]
atlas = ExtResource("2_4yjlw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypyxn"]
atlas = ExtResource("2_4yjlw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lri0"]
atlas = ExtResource("2_4yjlw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wigc"]
atlas = ExtResource("2_4yjlw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u7b6"]
atlas = ExtResource("2_4yjlw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgi8w"]
atlas = ExtResource("2_4yjlw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52p8"]
atlas = ExtResource("2_4yjlw")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8g0y"]
atlas = ExtResource("2_4yjlw")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8uwi"]
atlas = ExtResource("2_4yjlw")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auusy"]
atlas = ExtResource("2_4yjlw")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr664"]
atlas = ExtResource("2_4yjlw")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gnsl"]
atlas = ExtResource("2_4yjlw")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2rbj"]
atlas = ExtResource("2_4yjlw")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nnax"]
atlas = ExtResource("2_4yjlw")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igptq"]
atlas = ExtResource("2_4yjlw")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uroyf"]
atlas = ExtResource("2_4yjlw")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yerj"]
atlas = ExtResource("2_4yjlw")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_et3br"]
atlas = ExtResource("2_4yjlw")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8vfb"]
atlas = ExtResource("2_4yjlw")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwdtr"]
atlas = ExtResource("2_4yjlw")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srrxt"]
atlas = ExtResource("3_vuy3o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkbag"]
atlas = ExtResource("3_vuy3o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx1wb"]
atlas = ExtResource("3_vuy3o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqnq6"]
atlas = ExtResource("3_vuy3o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksuvd"]
atlas = ExtResource("3_vuy3o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndtuf"]
atlas = ExtResource("3_vuy3o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul76w"]
atlas = ExtResource("3_vuy3o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nq5w"]
atlas = ExtResource("3_vuy3o")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf1vq"]
atlas = ExtResource("3_vuy3o")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw3gd"]
atlas = ExtResource("3_vuy3o")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejyk8"]
atlas = ExtResource("3_vuy3o")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofsfh"]
atlas = ExtResource("3_vuy3o")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2wtj"]
atlas = ExtResource("3_vuy3o")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vln1y"]
atlas = ExtResource("3_vuy3o")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv88q"]
atlas = ExtResource("3_vuy3o")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyr02"]
atlas = ExtResource("3_vuy3o")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20k5o"]
atlas = ExtResource("3_vuy3o")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyi3h"]
atlas = ExtResource("3_vuy3o")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfw1x"]
atlas = ExtResource("2_nx48e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plg2q"]
atlas = ExtResource("2_nx48e")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hannx"]
atlas = ExtResource("2_nx48e")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyj1q"]
atlas = ExtResource("2_nx48e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eypb"]
atlas = ExtResource("2_nx48e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiq70"]
atlas = ExtResource("2_nx48e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh6up"]
atlas = ExtResource("2_nx48e")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wmia"]
atlas = ExtResource("2_nx48e")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_836oc"]
atlas = ExtResource("2_nx48e")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_280dg"]
atlas = ExtResource("2_nx48e")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdy2m"]
atlas = ExtResource("2_nx48e")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc20d"]
atlas = ExtResource("2_nx48e")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrola"]
atlas = ExtResource("2_nx48e")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acnk0"]
atlas = ExtResource("2_nx48e")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x67v"]
atlas = ExtResource("2_nx48e")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcmgm"]
atlas = ExtResource("2_nx48e")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfjdv"]
atlas = ExtResource("2_nx48e")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33d0b"]
atlas = ExtResource("2_nx48e")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ax82"]
atlas = ExtResource("2_nx48e")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cogjv"]
atlas = ExtResource("2_nx48e")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dluvq"]
atlas = ExtResource("2_nx48e")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xq46"]
atlas = ExtResource("2_nx48e")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgpby"]
atlas = ExtResource("2_nx48e")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5sdk"]
atlas = ExtResource("2_nx48e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uytme"]
atlas = ExtResource("2_nx48e")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_07nqh"]
atlas = ExtResource("2_nx48e")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6rx5"]
atlas = ExtResource("2_nx48e")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j450"]
atlas = ExtResource("2_nx48e")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpxh4"]
atlas = ExtResource("2_nx48e")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7abhc"]
atlas = ExtResource("2_nx48e")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv46x"]
atlas = ExtResource("2_nx48e")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgoc"]
atlas = ExtResource("2_nx48e")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5cg8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k2wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax5gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85w5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypyxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lri0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wigc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u7b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgi8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8g0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8uwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auusy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr664")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gnsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2rbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nnax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igptq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uroyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yerj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et3br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8vfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwdtr")
}],
"loop": false,
"name": &"enter",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_srrxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkbag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx1wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqnq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksuvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndtuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul76w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nq5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf1vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw3gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejyk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofsfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2wtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vln1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv88q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyr02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20k5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyi3h")
}],
"loop": false,
"name": &"evacuate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfw1x")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plg2q")
}],
"loop": true,
"name": &"idle_invis",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hannx")
}],
"loop": true,
"name": &"idle_speedy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyj1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eypb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiq70")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh6up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wmia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_836oc")
}],
"loop": true,
"name": &"run_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_280dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdy2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc20d")
}],
"loop": true,
"name": &"run_down_invis",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrola")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acnk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x67v")
}],
"loop": true,
"name": &"run_down_speedy",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcmgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfjdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33d0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ax82")
}],
"loop": true,
"name": &"run_invis",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cogjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dluvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xq46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgpby")
}],
"loop": true,
"name": &"run_speedy",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5sdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uytme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07nqh")
}],
"loop": true,
"name": &"run_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6rx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j450")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpxh4")
}],
"loop": true,
"name": &"run_up_invis",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7abhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv46x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgoc")
}],
"loop": true,
"name": &"run_up_speedy",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_80fer"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n6glb"]
radius = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp6x2"]
bg_color = Color(0.133165, 0.623586, 0.551104, 1)
anti_aliasing = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u6632"]
shader = ExtResource("5_6td6m")

[node name="Squirrel" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 514
collision_mask = 13
motion_mode = 1
script = ExtResource("1_ufrd5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c5cg8")
animation = &"run_up_speedy"
autoplay = "enter"

[node name="SpriteCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.473846, 4.24554)
shape = SubResource("CircleShape2D_80fer")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_layer = 514
collision_mask = 13

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(0.473846, 4.24554)
shape = SubResource("CircleShape2D_n6glb")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 1
offset_left = -29.0
offset_top = -15.0
offset_right = 29.0
offset_bottom = -11.0
theme_override_styles/fill = SubResource("StyleBoxFlat_pp6x2")
value = 100.0
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
metadata/_edit_lock_ = true

[node name="EnterTimer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true

[node name="PowerUpSpeedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpInvisibleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 100
material = SubResource("ShaderMaterial_u6632")
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 100.0
scale_amount_max = 2.0

[node name="SFX" type="Node2D" parent="."]

[node name="EvacuateSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_lakr4")
bus = &"SFX"

[node name="EnterSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_2yjpb")
bus = &"SFX"

[node name="RunSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_h6q8h")
bus = &"SFX"

[node name="SpeedyRunSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_h6q8h")
pitch_scale = 1.3
bus = &"SFX"

[node name="EnemyHitSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_twflp")
bus = &"SFX"

[node name="SpeedBoosterSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("10_lvje1")
bus = &"SFX"

[node name="InvisibleSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("11_wn50d")
bus = &"SFX"

[node name="HideSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("12_e1ejo")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_kk5gr")
volume_db = -2.0
bus = &"Music"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="PowerUpSpeedTimer" to="." method="_on_power_up_speed_timer_timeout"]
[connection signal="timeout" from="PowerUpInvisibleTimer" to="." method="_on_power_up_invisible_timer_timeout"]
